--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ rand = "0.8.5"
 smallvec = { version = "1.6", features = ["const_generics"] } # same as bevy 0.12
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
+thiserror = "1.0"
 
 [workspace]
 resolver = "2"
