--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ smallvec = { version = "1.6", features = ["const_generics"] } # same as bevy 0.1
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
 thiserror = "1.0"
+moonshine-save = "0.3.5"
 
 [workspace]
 resolver = "2"
